deployment/api-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fresco-api-pod
  labels:
    app: fresco-api
spec:
  containers:
    - name: fresco-api-container
      image: rkalyana/ccri-fresco-api:nginx
      ports:
      - containerPort: 80
      volumeMounts:
        - name: nginx-ssl
          mountPath: /etc/nginx/ssl
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
  volumes:
    - name: nginx-ssl
      secret:
        secretName: fresco-api-tls
    - name: nginx-config
      configMap:
        name: nginx-config
        items:
        - key: default
          path: default.conf
