deployment/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fresco-api-pod
  labels:
    app: fresco-api
spec:
  containers:
    - name: fresco-api-container
      image: rkalyana/ccri-fresco-api
      ports:
      - containerPort: 5000
