deployment/api-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fresco-api-svc
spec:
  selector:
    app: fresco-api
  ports:
    - name: http 
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
