deployment/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fresco-api-svc
spec:
  selector:
    app: fresco-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
